--- a/footvibe/template/user/index.html
+++ b/footvibe/template/user/index.html
@@ -158,8 +158,8 @@
                                     </span>
                                 </div>
                                 <div class="product-price">
-                                    <span>${{product.sale_price}}</span>
-                                    <span class="old-price">${{product.max_price}}</span>
+                                    <span>{{product.sale_price}}</span>
+                                    <span class="old-price">{{product.max_price}}</span>
                                 </div>
                                 <div class="product-action-1 show">
                                     <a aria-label="Add To Cart" class="action-btn hover-up" href="{% url "cart_mng:cart" %}"><i class="fi-rs-shopping-bag-add"></i></a>
